fix broken css

--- a/style.css
+++ b/style.css
@@ -157,9 +157,9 @@ button {
     border-color: transparent;
 }
 
-.line1,
-.line2,
-.line3 {
+
+.line1 {
+    width: 60px;
     height: 8px;
     background-color: aliceblue;
     margin: 5px 0;
@@ -167,14 +167,20 @@ button {
     transition: 1s;
 }
 
-.line1 {
-    width: 60px;
-}
-
 .line2 {
     width: 40px;
+    height: 8px;
+    background-color: aliceblue;
+    margin: 5px 0;
+    border-radius: 25px;
+    transition: 1s;
 }
 
 .line3 {
     width: 50px;
+    height: 8px;
+    background-color: aliceblue;
+    margin: 5px 0;
+    border-radius: 25px;
+    transition: 1s;
 }
